--- a/mycss/clock.css
+++ b/mycss/clock.css
@@ -16,7 +16,7 @@
   position: absolute;
   width: 20px;
   height: 20px;
-  font-size: 15px;
+  font-size: 15.15151515px;
   text-align: center;
   line-height: 20px;
   border-radius: 10px;
@@ -29,10 +29,10 @@
   top: 50%;
   left: 50%;
   width: 20px;
-  height: 100px;
+  height: 125px;
   border: 1px solid #fff;
   background: rgba(255, 255, 255, 0.5);
-  z-index: 5;
+  z-index: 3;
   margin-left: -10px;
   margin-top: -250px;
 }
@@ -45,6 +45,22 @@
   z-index: 0;
   margin-left: -250px;
   margin-top: -250px;
+}
+#mask {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 500px;
+  height: 500px;
+  background-position: center center;
+  background-size: cover;
+  z-index: 5;
+  margin-left: -250px;
+  margin-top: -250px;
+  background-color: rgba(255, 255, 255, 0.8);
+}
+#mask img {
+  width: 500px;
 }
 .mins {
   width: 400px;
